tests/ui/array-slice-vec/closure-in-array-len.stderr
error[E0308]: mismatched types
  --> $DIR/closure-in-array-len.rs:3:13
   |
LL |     fn([u8; |x: u8| {}]),
   |             ^^^^^^^^^^ expected `usize`, found closure
   |
   = note: expected type `usize`
           found closure `{closure@$DIR/closure-in-array-len.rs:3:13: 3:20}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
